Fix totals alignment

--- a/client/extensions/woocommerce/app/order/order-details/style.scss
+++ b/client/extensions/woocommerce/app/order/order-details/style.scss
@@ -51,7 +51,7 @@
 
 .order-details__actions {
 	margin: 0 -24px;
-	padding: 16px 76px 16px 24px;
+	padding: 16px 80px 16px 24px;
 	border-bottom: 1px solid lighten($gray, 30%);
 	text-align: right;
 
@@ -71,7 +71,6 @@
 	box-shadow: none;
 	border: none;
 	text-align: right;
-	padding-right: 55px;
 
 	& + .form-setting-explanation {
 		padding-right: 55px;
@@ -163,6 +162,7 @@
 		.order-details__totals-value {
 			// Increase width for PriceInput
 			width: 13em;
+			padding-right: 79px;
 		}
 
 		.form-text-input-with-affixes {
